--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,793 @@
-.App {
+body{
+  background-color: #050205;
+ 
+}
+.home{
+  background-image: url(frontDog.png);
+  background-size: cover;
+   height: 100vh;
+   width: 100vw;
+}
+h1{
+  color: #ffffff;
+  font-size: 74px;
+  font-family: "Poppins", serif;
+  font-weight: 500;
+}
+.text{
+  color: #ffffff;
+  font-family: "Poppins", serif;
+  font-weight: 300;
+  font-size: 25px;
+}
+.btn{
+  background-color: #c79288;
+  color: #ffffff;
+  font-size: 14px;
+  padding: 20px 40px;
+  border: none;
+  border-radius: 3px;
+  font-family: "Poppins", serif;
+  font-weight: 300;
+}
+.btn-home{
+  width: 20%;
+}
+.box{
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-top: 110px;
+  margin-left: 100px;
+}
+.link{
+  color:#c79288;
+  text-decoration: none;
+  padding: 10px 40px;
+  font-family: "Poppins", serif;
+  font-weight: 300;
+  font-size: 18px;
+}
+nav{
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+  font-family: "Poppins", serif;
+  font-weight: 300;
+  flex-wrap: wrap;
+}
+h2{
+  color: #ffffff;
+  font-size: 45px;
+  font-family: "Poppins", serif;
+  font-weight: 500;
+}
+.middle{
+  margin-top: 250px;
+  height: 45vh;
+  background-color: #c79288;
+}
+.middle-text{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.meetFriend{
+  background-color: #050205;
   }
+.findPet{
+  margin-top: 40px;
+  margin-left: 780px;
+  }
+.things{
+  margin-left: 50px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/*team*/
+.team{
+  height: 100vh;
+}
+.team-box{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+}
+.teamMember{
+  font-size: 35px;
+  color: #c79288;
+  text-decoration: none;
+  font-family: "Poppins", serif;
+  font-weight: 300;
+}
+.teamTitle{
+  font-size: 20px;
+  color:#c79288;
+  font-family: "Poppins", serif;
+  font-weight: 300;
+}
+.team-btn{
+  display: flex;
+  justify-content: space-evenly;
+}
+.person-btn{
+  border: none;
+  color:#ffffff;
+  background: transparent;
+  font-size: 18px;
+  font-family: "Poppins", serif;
+  font-weight: 300;
+}
+/*services*/
+.services{
+  background-image: url(paws.png);
+  height: 150vh;
+}
+.services-box{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.services-header{
+  color:#050205;
+}
+.service-description{
+  background-color: #c79288;
+  display: flex;
+  justify-content: space-evenly;
+  width: 40%;
+  height: 40vh;
+  color:#050205;
+  font-family: "Poppins", serif;
+  font-weight: 300;
+  margin-left: 500px;
+  margin-top: 10px;
+}
+.missionText{
+  color:#050205;
+  margin-top: 40px;
+  margin-left: 10px;
+}
+h3{
+  font-family: "Poppins", serif;
+  font-weight: 500;
+  font-size: 30px;
+  text-decoration: underline;
+  margin-left: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-services{
+  margin-left: 800px;
+}
+/* footer*/
+.footer{
+  height: 37vh;
+  background-color: #ffffff;
+  margin-top: 400px;
+  margin-left: 0;
+}
+.footer-logo{
+  margin-left: 40px;
+  margin-top: 20px;
+}
+.footer-buttons{
+  display: flex;
+  width: 10%;
+  margin-top: 0;
+  flex-wrap: wrap;
+  margin-left: 1200px;
+}
+.footer-nav{
+  color: #c79288;
+  text-decoration: underline;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.signature{
+  margin-left: 700px;
+}
+.services-header{
+  margin-left: 700px;
+}
+/* Find a Pet*/
+.pets{
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 50px;
+}
+.pets-card{
+  padding: 2%;
+  flex-grow: 1;
+  flex-basis: 16%;
+}
+.container{
+  display: flex;
+  justify-content: center;
+  background-color: #c79288;
+  color: #ffffff;
+}
+.change{
+  background-color: #050205;
+  margin: 10px;
+  color:#ffffff;
+  border: none;
+  font-family: "Poppins", serif;
+  font-size: 20px;
+}
+.petName{
+  font-family: "Poppins", serif;
+  font-weight: 500;
+  font-size: 30px;
+  text-decoration: none;
+  margin-left: 15px;
+  color: #c79288;
+}
+.pet-text{
+  color:#ffffff;
+  font-family: "Poppins", serif;
+  font-weight: 300;
+  margin-left: 15px;
   }
-  to {
-    transform: rotate(360deg);
+  .modal-btn{
+    margin-left: 15px;
+    color: #ffffff;
+    border: none;
+    background-color: #c79288;
+    border-radius: 20px;
+    font-size: 15px;
+    font-family: "Poppins", serif;
+  }
+  .btn-inquire{
+    margin-left: 700px;
+    margin-top: 80px;
+    width: 20%;
+  }
+  /*Form get involved*/
+  .get-involved-hands{
+    margin-left: 40px;
+  }
+  .form-box{
+   display: flex ;
+   justify-content: space-evenly;
+   flex-wrap: wrap;
+  }
+  .form-text{
+    font-family: "Poppins", serif;
+    font-weight: 300;
+    color:#ffffff;
+    font-size: 25px;
+  }
+  .required{
+    font-size: 12px;
+  }
+  .enterOne{
+    width:100%;
+    padding: 12px 44px;
+    box-shadow: inset 0px 0px 0px 3px #c79288;
+  }
+  .enterTwo{
+    width: 100%;
+    padding: 20px 44px;
+    box-shadow: inset 0px 0px 0px 3px #c79288;
+  }
+  .enterThree{
+    width: 100%;
+    padding: 60px 44px;
+    box-shadow: inset 0px 0px 0px 3px #c79288;
+  }
+  .form-btn{
+    margin: 20px;
+    margin-left: 90px;
+   }
+   /* burger menu*/
+   .nav-links{
+    display: none;
+   }
+   .burger-btn{
+    background-color: #c79288;
+    border: none;
+    border-radius: 10px;
+    display: none;
+   }
+
+
+
+   @media all and ( max-width: 1440px){
+    .cat-picture{
+      width: 330px;
+    }
+    .btn-services{
+      margin-left: 630px;
+      margin-top: 60px;
+    }
+    
+   }
+   @media all and ( max-width: 1320px){
+    .cat-picture{
+      width: 300px;
+    }
+    .service-description{
+      width: 50%;
+      height: 41vh;
+      margin-left: 350px;
+      margin-top: 10px;
+    }
+    .btn-services{
+      margin-left: 570px;
+      margin-top: 40px;
+    }
+    .services-header{
+      margin-left: 500px;
+    }
+    .signature{
+      margin-left: 390px;
+      font-size: 20px;
+    }
+   }
+   @media all and ( max-width: 1200px){
+    .home{
+      width: 100%;
+    }
+    .link{
+      padding: 8px 17px;
+    }
+
+    .findPet{
+      margin-top: 30px;
+      margin-left: 500px;
+    }
+    .signature{
+      margin-left: 380px;
+      font-size: 20px;
+    }
+    .service-description{
+      width: 50%;
+      height: 35vh;
+      margin-left: 80px;
+      margin-top: 10px;
+    }
+    .cat-picture{
+      width: 280px;
+    }
+    .btn-services{
+      margin-left: 530px;
+      margin-top: 70px;
+    }
+    .services-header{
+      margin-left: 470px;
+    }
+    .service-description{
+      width: 50%;
+      height: 44vh;
+      margin-left: 300px;
+      margin-top: 10px;
+    }
+    .services{
+     height: 160vh;
+    }
+    .missionText{
+      margin-top: 30px;
+      margin-left: 10px;
+    }
+    .btn-inquire{
+      margin-left: 480px;
+      margin-top: 170px;
+      width: 23%;
+    }
+    form{
+      margin-right: 40px;
+    }
+    
+   }
+   @media all and ( max-width: 1100px){
+    .cat-picture{
+      width: 240px;
+    }
+    .service-description{
+      width: 60%;
+      height: 46vh;
+      margin-left: 210px;
+      margin-top: 10px;
+    }
+    .cat-picture{
+      width: 250px;
+    }
+    .btn-services{
+      margin-left: 500px;
+      margin-top: 70px;
+    }
+    .signature{
+      margin-left: 280px;
+    }
+    }
+  
+   @media all and ( max-width: 992px){
+    .findPet{
+      margin-top: 30px;
+      margin-left: 400px;
+    }
+    .signature{
+      margin-left: 280px;
+    }
+    .cat-picture{
+      width: 240px;
+    }
+    .services{
+      height: 170vh;
+     }
+    .service-description{
+      width: 60%;
+      height: 48vh;
+      margin-left: 210px;
+      margin-top: 10px;
+    }
+    .services-header{
+      margin-left: 370px;
+    }
+    .btn-services{
+      margin-left: 410px;
+    }
+    .signature{
+      margin-left: 280px;
+    }
+    .btn-inquire{
+      margin-left: 380px;
+      margin-top: 170px;
+      width: 23%;
+    }
+    
+  }
+  @media all and ( max-width: 933px){
+    .signature{
+      margin-left: 190px;
+    }
+    .findPet{
+      margin-top: 40px;
+     margin-left: 390px;
+    }
+    .cat-picture{
+      width: 220px;
+    }
+    form{
+      margin-right: 60px;
+     
   }
 }
+@media all and ( max-width: 850px){
+  .btn-home{
+    width: 40%;
+  }
+  h1{
+    color: #ffffff;
+    font-size: 54px;
+    font-family: "Poppins", serif;
+    font-weight: 500;
+  }
+  .findPet{
+    margin-top: 30px;
+    margin-left: 350px;
+  }
+ 
+    .signature{
+      font-size: 18px;
+    }
+    .cat-picture{
+      width: 210px;
+    }
+    .btn-services{
+      margin-left: 360px;
+      margin-top: 80px;
+    }
+    .services-header{
+      margin-left: 280px;
+     }
+     .service-description{
+      width: 80%;
+      height: 42vh;
+      margin-left: 80px;
+      margin-top: 10px;
+    }
+    .pets{
+     margin-left: 180px;
+  }
+  .btn-inquire{
+    margin-left: 350px;
+    margin-top: 100px;
+  }
+  form{
+    margin-right: 90px;
+  }
+  .get-involved{
+    font-size: 40px;
+  }
+  .form-text{
+    font-size: 18px;
+  }
+}
+   @media all and ( max-width: 800px){
+    .home{
+      width: 100%;
+    }
+    nav{
+      padding: 15px;
+    }
+    .link{
+      padding: 8px 17px;
+      font-size: 18px;
+    }
+    .findPet{
+      margin-top: 30px;
+      margin-left: 300px;
+    }
+    .signature{
+      margin-left: 130px;
+    }
+    .services{
+      height: 150vh;
+    }
+    .service-description{
+      width: 80%;
+      height: 38vh;
+      margin-left: 80px;
+      margin-top: 10px;
+    }
+    .missionText{
+      color:#050205;
+      margin-top: 40px;
+      margin-left: 10px;
+    }
+    h3{
+      font-family: "Poppins", serif;
+      font-weight: 500;
+      font-size: 25px;
+      text-decoration: underline;
+      margin-left: 15px;
+    }
+    .services-header{
+     margin-left: 200px;
+    }
+    
+    .btn-services{
+      margin-left: 300px;
+      margin-top: 70px;
+    }
+    .cat-picture{
+      width: 180px;
+    }
+    .pets{
+      margin-left: 120px;
+    }
+     .modal-btn{
+        font-size: 18px;
+       }
+      .btn-inquire{
+        margin-left: 300px;
+        margin-top: 100px;
+        width: 23%;
+      }
+      .pet-image{
+        width: 500px;
+        height: 670px;
+      }
+  
+      .get-involved-hands{
+        margin-left: 300px;
+      }
+      .form-box{
+        width: 100%;
+        flex-direction: column;
+      }
+      
+      .enterOne{
+        width:80%;
+      }
+      .enterTwo{
+        width: 80%;
+      }
+      .enterThree{
+        width: 80%;
+      }
+      .form-btn{
+        margin: 50px;
+        margin-left: 280px;
+       }
+       .get-involved{
+        text-align: center;
+       }
+       .form-text{
+        text-align: center;
+       }
+       .label-text{
+        margin-right: 540px;
+       }
+       form{
+        margin-left: 40px;
+       }
+      .findPet{
+        margin-left: 300px;
+      }
+    
+  }
+
+  @media all and ( max-width: 768px){
+    .btn-home{
+      width: 40%;
+    }
+    .middle{
+      margin-top: 150px;
+      height: 45vh;
+      width: 100%;
+     }
+     .services{
+      height: 170vh;
+    }
+  .service-description{
+      width: 80%;
+      height: 47vh;
+      margin-left: 80px;
+    }
+  }
+@media all and ( max-width: 600px){
+
+    .burger-btn{
+      display:block;
+      background-position: center;
+    width: 60px;
+    height: 60px;
+    margin-left: 270px;
+    }
+.link{
+      display: none;
+  }
+nav{
+    display: flex;
+    justify-content:space-evenly;
+  }
+.nav-links{
+    display: none;
+    margin-top: 80px;
+    z-index: 10;
+  }
+.nav-links.show{
+    border: 2px solid #c79288;
+    margin: 20px;
+    padding-left: 10px;
+    padding-bottom: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+.logo{
+    height: 80px;
+  }
+.box{
+    width: 100%;
+    margin-top: 80px;
+    margin-left: 50px;
+  }
+.home{
+    background-size: cover;
+    width: 100%;
+  }
+.btn{
+    font-size: 15px;
+  }
+.btn-home{
+    width: 40%;
+  }
+.text{
+    font-size: 15px;
+  }
+h1{
+   font-size: 50px;
+  }
+.middle{
+    margin-top: 250px;
+    height: 65vh;
+    width: 100%;
+    background-color: #c79288;
+  }
+h2{
+   font-size: 35px;
+  }
+.footer{
+    height: 35vh;
+    margin-top: 680px;
+    margin-left: 0;
+  }
+.findPet{
+    margin-top: 40px;
+   margin-left: 140px;
+  }
+.signature{
+    margin-left: 50px;
+    font-size: 15px;
+  }
+.footer-nav{
+    display: none;
+  }
+.services{
+    height: 170vh;
+  }
+.service-description{
+    width: 80%;
+    height: 47vh;
+    margin-left: 40px;
+  }
+.missionText{
+    margin-top: 20px;
+    margin-left: 10px;
+  }
+h3{
+    font-size: 20px;
+    margin-left: 10px;
+  }
+.services-header{
+    margin-left: 90px;
+  }
+.cat-picture{
+    width: 120px;
+  }
+.btn-services{
+    margin-left: 160px;
+    margin-top: 80px;
+  }
+.pets{
+    width: 100%;
+    margin-left: 50px;
+    padding-right: 10px;
+  }
+.container{
+    width: 100%;
+  }
+.change{
+    margin: 10px;
+    font-size: 15px;
+  }
+.petName{
+    font-size: 20px;
+    margin-left: 10px;
+  }
+.pet-text{
+    font-size: 12px;
+    margin-left: 10px;
+  }
+.modal-btn{
+    margin-left: 10px;
+    border-radius: 20px;
+    font-size: 12px;
+  }
+.btn-inquire{
+    margin-left: 120px;
+    margin-top: 80px;
+    width: 40%;
+  }
+.pet-image{
+    width: 370px;
+    height: 570px;
+  }
+.get-involved{
+    text-align: center;
+  }
+.get-involved-hands{
+    margin-left: 200px;
+  }
+.form-box{
+    width: 100%;
+  }
+.form-text{
+  font-size: 17px;
+  text-align: center;
+  }
+.required{
+    font-size: 10px;
+  }
+form{
+  width: 80%;
+   margin-left: 55px;
+  }
+  
+.form-btn{
+    margin: 40px;
+    margin-left: 180px;
+  }
+  
+}
+
